# WorkerAnt

./: README.md  a.py  main_new.py  manage.bat  pyproject.toml
app/infra/actions/: get_path.py  login.py  register.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.css  App.tsx  api.ts  index.css
ui/src/components/: Dashboard.tsx  Files.tsx  Login.tsx  Register.tsx  Settings.tsx  Upload.tsx
